# tsbuild

./: .gitignore  README.md  install.ps1  pyproject.toml
.github/workflows/: publish.yml
tsbuild/: __main__.py
